@@ -2262,3 +2262,288 @@ PyTypeObject BetweenType = {
     Between_new,                 /* tp_new */
 };
 
+
+/************/
+/* Denorm */
+/************/
+#ifndef USE_DOUBLE
+#define DENORM_RAND  ((MYFLT) ((rand()/((MYFLT)(RAND_MAX)*0.5+1) - 1.0) * (MYFLT)(1.0e-24)))
+#else
+#define DENORM_RAND  ((MYFLT) ((rand()/((MYFLT)(RAND_MAX)*0.5+1) - 1.0) * (MYFLT)(1.0e-60)))
+#endif
+
+typedef struct {
+    pyo_audio_HEAD
+    PyObject *input;
+    Stream *input_stream;
+    int modebuffer[2]; // need at least 2 slots for mul & add 
+} Denorm;
+
+static void
+Denorm_filters(Denorm *self) {
+    int i;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    
+    for (i=0; i<self->bufsize; i++) {
+        self->data[i] = in[i] + DENORM_RAND;
+    }
+}
+
+static void Denorm_postprocessing_ii(Denorm *self) { POST_PROCESSING_II };
+static void Denorm_postprocessing_ai(Denorm *self) { POST_PROCESSING_AI };
+static void Denorm_postprocessing_ia(Denorm *self) { POST_PROCESSING_IA };
+static void Denorm_postprocessing_aa(Denorm *self) { POST_PROCESSING_AA };
+static void Denorm_postprocessing_ireva(Denorm *self) { POST_PROCESSING_IREVA };
+static void Denorm_postprocessing_areva(Denorm *self) { POST_PROCESSING_AREVA };
+static void Denorm_postprocessing_revai(Denorm *self) { POST_PROCESSING_REVAI };
+static void Denorm_postprocessing_revaa(Denorm *self) { POST_PROCESSING_REVAA };
+static void Denorm_postprocessing_revareva(Denorm *self) { POST_PROCESSING_REVAREVA };
+
+static void
+Denorm_setProcMode(Denorm *self)
+{
+    int muladdmode;
+    muladdmode = self->modebuffer[0] + self->modebuffer[1] * 10;
+    
+    self->proc_func_ptr = Denorm_filters;
+    
+	switch (muladdmode) {
+        case 0:        
+            self->muladd_func_ptr = Denorm_postprocessing_ii;
+            break;
+        case 1:    
+            self->muladd_func_ptr = Denorm_postprocessing_ai;
+            break;
+        case 2:    
+            self->muladd_func_ptr = Denorm_postprocessing_revai;
+            break;
+        case 10:        
+            self->muladd_func_ptr = Denorm_postprocessing_ia;
+            break;
+        case 11:    
+            self->muladd_func_ptr = Denorm_postprocessing_aa;
+            break;
+        case 12:    
+            self->muladd_func_ptr = Denorm_postprocessing_revaa;
+            break;
+        case 20:        
+            self->muladd_func_ptr = Denorm_postprocessing_ireva;
+            break;
+        case 21:    
+            self->muladd_func_ptr = Denorm_postprocessing_areva;
+            break;
+        case 22:    
+            self->muladd_func_ptr = Denorm_postprocessing_revareva;
+            break;
+    }   
+}
+
+static void
+Denorm_compute_next_data_frame(Denorm *self)
+{
+    (*self->proc_func_ptr)(self); 
+    (*self->muladd_func_ptr)(self);
+    Stream_setData(self->stream, self->data);
+}
+
+static int
+Denorm_traverse(Denorm *self, visitproc visit, void *arg)
+{
+    pyo_VISIT
+    Py_VISIT(self->input);
+    Py_VISIT(self->input_stream);
+    return 0;
+}
+
+static int 
+Denorm_clear(Denorm *self)
+{
+    pyo_CLEAR
+    Py_CLEAR(self->input);
+    Py_CLEAR(self->input_stream);
+    return 0;
+}
+
+static void
+Denorm_dealloc(Denorm* self)
+{
+    free(self->data);
+    Denorm_clear(self);
+    self->ob_type->tp_free((PyObject*)self);
+}
+
+static PyObject * Denorm_deleteStream(Denorm *self) { DELETE_STREAM };
+
+static PyObject *
+Denorm_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
+{
+    int i;
+    Denorm *self;
+    self = (Denorm *)type->tp_alloc(type, 0);
+    
+	self->modebuffer[0] = 0;
+	self->modebuffer[1] = 0;
+    
+    INIT_OBJECT_COMMON
+    Stream_setFunctionPtr(self->stream, Denorm_compute_next_data_frame);
+    self->mode_func_ptr = Denorm_setProcMode;
+    return (PyObject *)self;
+}
+
+static int
+Denorm_init(Denorm *self, PyObject *args, PyObject *kwds)
+{
+    PyObject *inputtmp, *input_streamtmp, *multmp=NULL, *addtmp=NULL;
+    
+    static char *kwlist[] = {"input", "mul", "add", NULL};
+    
+    if (! PyArg_ParseTupleAndKeywords(args, kwds, "O|OO", kwlist, &inputtmp, &multmp, &addtmp))
+        return -1; 
+    
+    INIT_INPUT_STREAM
+    
+    if (multmp) {
+        PyObject_CallMethod((PyObject *)self, "setMul", "O", multmp);
+    }
+    
+    if (addtmp) {
+        PyObject_CallMethod((PyObject *)self, "setAdd", "O", addtmp);
+    }
+    
+    Py_INCREF(self->stream);
+    PyObject_CallMethod(self->server, "addStream", "O", self->stream);
+    
+    srand((unsigned)(time(0)));
+
+    (*self->mode_func_ptr)(self);
+    
+    Py_INCREF(self);
+    return 0;
+}
+
+static PyObject * Denorm_getServer(Denorm* self) { GET_SERVER };
+static PyObject * Denorm_getStream(Denorm* self) { GET_STREAM };
+static PyObject * Denorm_setMul(Denorm *self, PyObject *arg) { SET_MUL };	
+static PyObject * Denorm_setAdd(Denorm *self, PyObject *arg) { SET_ADD };	
+static PyObject * Denorm_setSub(Denorm *self, PyObject *arg) { SET_SUB };	
+static PyObject * Denorm_setDiv(Denorm *self, PyObject *arg) { SET_DIV };	
+
+static PyObject * Denorm_play(Denorm *self, PyObject *args, PyObject *kwds) { PLAY };
+static PyObject * Denorm_out(Denorm *self, PyObject *args, PyObject *kwds) { OUT };
+static PyObject * Denorm_stop(Denorm *self) { STOP };
+
+static PyObject * Denorm_multiply(Denorm *self, PyObject *arg) { MULTIPLY };
+static PyObject * Denorm_inplace_multiply(Denorm *self, PyObject *arg) { INPLACE_MULTIPLY };
+static PyObject * Denorm_add(Denorm *self, PyObject *arg) { ADD };
+static PyObject * Denorm_inplace_add(Denorm *self, PyObject *arg) { INPLACE_ADD };
+static PyObject * Denorm_sub(Denorm *self, PyObject *arg) { SUB };
+static PyObject * Denorm_inplace_sub(Denorm *self, PyObject *arg) { INPLACE_SUB };
+static PyObject * Denorm_div(Denorm *self, PyObject *arg) { DIV };
+static PyObject * Denorm_inplace_div(Denorm *self, PyObject *arg) { INPLACE_DIV };
+
+static PyMemberDef Denorm_members[] = {
+    {"server", T_OBJECT_EX, offsetof(Denorm, server), 0, "Pyo server."},
+    {"stream", T_OBJECT_EX, offsetof(Denorm, stream), 0, "Stream object."},
+    {"input", T_OBJECT_EX, offsetof(Denorm, input), 0, "Input sound object."},
+    {"mul", T_OBJECT_EX, offsetof(Denorm, mul), 0, "Mul factor."},
+    {"add", T_OBJECT_EX, offsetof(Denorm, add), 0, "Add factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyMethodDef Denorm_methods[] = {
+    {"getServer", (PyCFunction)Denorm_getServer, METH_NOARGS, "Returns server object."},
+    {"_getStream", (PyCFunction)Denorm_getStream, METH_NOARGS, "Returns stream object."},
+    {"deleteStream", (PyCFunction)Denorm_deleteStream, METH_NOARGS, "Remove stream from server and delete the object."},
+    {"play", (PyCFunction)Denorm_play, METH_VARARGS|METH_KEYWORDS, "Starts computing without sending sound to soundcard."},
+    {"out", (PyCFunction)Denorm_out, METH_VARARGS|METH_KEYWORDS, "Starts computing and sends sound to soundcard channel speficied by argument."},
+    {"stop", (PyCFunction)Denorm_stop, METH_NOARGS, "Stops computing."},
+    {"setMul", (PyCFunction)Denorm_setMul, METH_O, "Sets oscillator mul factor."},
+    {"setAdd", (PyCFunction)Denorm_setAdd, METH_O, "Sets oscillator add factor."},
+    {"setSub", (PyCFunction)Denorm_setSub, METH_O, "Sets inverse add factor."},
+    {"setDiv", (PyCFunction)Denorm_setDiv, METH_O, "Sets inverse mul factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyNumberMethods Denorm_as_number = {
+    (binaryfunc)Denorm_add,                         /*nb_add*/
+    (binaryfunc)Denorm_sub,                         /*nb_subtract*/
+    (binaryfunc)Denorm_multiply,                    /*nb_multiply*/
+    (binaryfunc)Denorm_div,                                              /*nb_divide*/
+    0,                                              /*nb_remainder*/
+    0,                                              /*nb_divmod*/
+    0,                                              /*nb_power*/
+    0,                                              /*nb_neg*/
+    0,                                              /*nb_pos*/
+    0,                                              /*(unaryfunc)array_abs,*/
+    0,                                              /*nb_nonzero*/
+    0,                                              /*nb_invert*/
+    0,                                              /*nb_lshift*/
+    0,                                              /*nb_rshift*/
+    0,                                              /*nb_and*/
+    0,                                              /*nb_xor*/
+    0,                                              /*nb_or*/
+    0,                                              /*nb_coerce*/
+    0,                                              /*nb_int*/
+    0,                                              /*nb_long*/
+    0,                                              /*nb_float*/
+    0,                                              /*nb_oct*/
+    0,                                              /*nb_hex*/
+    (binaryfunc)Denorm_inplace_add,                 /*inplace_add*/
+    (binaryfunc)Denorm_inplace_sub,                 /*inplace_subtract*/
+    (binaryfunc)Denorm_inplace_multiply,            /*inplace_multiply*/
+    (binaryfunc)Denorm_inplace_div,                                              /*inplace_divide*/
+    0,                                              /*inplace_remainder*/
+    0,                                              /*inplace_power*/
+    0,                                              /*inplace_lshift*/
+    0,                                              /*inplace_rshift*/
+    0,                                              /*inplace_and*/
+    0,                                              /*inplace_xor*/
+    0,                                              /*inplace_or*/
+    0,                                              /*nb_floor_divide*/
+    0,                                              /*nb_true_divide*/
+    0,                                              /*nb_inplace_floor_divide*/
+    0,                                              /*nb_inplace_true_divide*/
+    0,                                              /* nb_index */
+};
+
+PyTypeObject DenormType = {
+    PyObject_HEAD_INIT(NULL)
+    0,                                              /*ob_size*/
+    "_pyo.Denorm_base",                                   /*tp_name*/
+    sizeof(Denorm),                                 /*tp_basicsize*/
+    0,                                              /*tp_itemsize*/
+    (destructor)Denorm_dealloc,                     /*tp_dealloc*/
+    0,                                              /*tp_print*/
+    0,                                              /*tp_getattr*/
+    0,                                              /*tp_setattr*/
+    0,                                              /*tp_compare*/
+    0,                                              /*tp_repr*/
+    &Denorm_as_number,                              /*tp_as_number*/
+    0,                                              /*tp_as_sequence*/
+    0,                                              /*tp_as_mapping*/
+    0,                                              /*tp_hash */
+    0,                                              /*tp_call*/
+    0,                                              /*tp_str*/
+    0,                                              /*tp_getattro*/
+    0,                                              /*tp_setattro*/
+    0,                                              /*tp_as_buffer*/
+    Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE | Py_TPFLAGS_HAVE_GC | Py_TPFLAGS_CHECKTYPES, /*tp_flags*/
+    "Denorm objects. Mixes low level noise to an input signal.",           /* tp_doc */
+    (traverseproc)Denorm_traverse,                  /* tp_traverse */
+    (inquiry)Denorm_clear,                          /* tp_clear */
+    0,                                              /* tp_richcompare */
+    0,                                              /* tp_weaklistoffset */
+    0,                                              /* tp_iter */
+    0,                                              /* tp_iternext */
+    Denorm_methods,                                 /* tp_methods */
+    Denorm_members,                                 /* tp_members */
+    0,                                              /* tp_getset */
+    0,                                              /* tp_base */
+    0,                                              /* tp_dict */
+    0,                                              /* tp_descr_get */
+    0,                                              /* tp_descr_set */
+    0,                                              /* tp_dictoffset */
+    (initproc)Denorm_init,                          /* tp_init */
+    0,                                              /* tp_alloc */
+    Denorm_new,                                     /* tp_new */
+};
